# Inform

./: .appveyor.yml  .travis.yml  CHANGELOG.md  CMakeLists.txt  install-to-pyinform.sh
docs/: index.adoc
examples/: CMakeLists.txt
examples/assets/: fission-yeast-seq.txt
examples/fission_yeast/: CMakeLists.txt  fission_yeast.cpp  network.cpp  network.h
include/inform/: distribution.h  entropy.h  inform.h  state_encoding.h  time_series.h
src/: CMakeLists.txt  distribution.cpp  distribution_iterator.cpp  entropy.cpp  time_series.cpp  transfer_entropy.c
test/: CMakeLists.txt
test/unittests/: CMakeLists.txt  canary.cpp  distribution.cpp  entropy.cpp  state_encoding.cpp  time_series.cpp  transfer_entropy.c
